puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Leads.Manager/content/Views/Leads/_Actions.cshtml.pp
<div class="well">
  Coming Soon!
</div>